--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <title>Khử Thâm Môi Nam Tại Đà Nẵng – Tự Nhiên – Không Đau | Lumi Beauty</title>
     <meta name="description"
         content="Lumi Beauty chuyên khử thâm môi nam tại Đà Nẵng. Quy trình 1-1 riêng tư, không đau, không sưng, giữ vẻ nam tính tuyệt đối. Kết quả sau 3 ngày.">
-    <meta name="keywords" content="khử thâm môi nam, phun môi nam đà nẵng, lumi beauty, khử thâm môi không đau, làm sáng môi nam">
+    <meta name="keywords"
+        content="khử thâm môi nam, phun môi nam đà nẵng, lumi beauty, khử thâm môi không đau, làm sáng môi nam">
     <meta name="theme-color" content="#88c0c4">
     <link rel="canonical" href="https://moinam.lumibeauty.studio/vi/" />
     <link rel="alternate" hreflang="vi" href="https://moinam.lumibeauty.studio/vi/" />
