--- a/ko/index.html
+++ b/ko/index.html
@@ -1185,7 +1185,7 @@
     <script src="../script.js" defer></script>
     <!-- Facebook Pixel Configuration -->
     <script src="/fb-pixel-config.js"></script>
-    <script src="/js/facebook-pixel.js"></script>
+    <script src="/js/fb-pixel.js"></script>
     <!-- GA4 Events Tracking -->
     <script src="/js/ga4-events.js" defer></script>
 </body>
