--- a/ko/space.html
+++ b/ko/space.html
@@ -13,7 +13,8 @@
     <link rel="alternate" hreflang="vi" data-hreflang="vi" href="https://moinam.lumibeauty.studio/vi/space.html">
     <link rel="alternate" hreflang="en" data-hreflang="en" href="https://moinam.lumibeauty.studio/en/space.html">
     <link rel="alternate" hreflang="ko" data-hreflang="ko" href="https://moinam.lumibeauty.studio/ko/space.html">
-    <link rel="alternate" hreflang="x-default" data-hreflang="x-default" href="https://moinam.lumibeauty.studio/vi/space.html">
+    <link rel="alternate" hreflang="x-default" data-hreflang="x-default"
+        href="https://moinam.lumibeauty.studio/vi/space.html">
     <meta property="og:type" content="website">
     <meta property="og:title" content="공간 - 루미 뷰티 | 다낭 반영구 시술">
     <meta property="og:description" content="루미 뷰티 다낭의 프라이빗하고 깨끗하며 편안한 공간을 발견하세요. 프라이빗 1:1, 당신만을 위한 아늑한 공간.">
