update fav icon

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="alternate" hreflang="en" href="https://moinam.lumibeauty.studio/en/" />
     <link rel="alternate" hreflang="ko" href="https://moinam.lumibeauty.studio/ko/" />
     <link rel="alternate" hreflang="x-default" href="https://moinam.lumibeauty.studio/vi/" />
+    <link rel="icon" href="/icons/fav_icon_96.png" sizes="any">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="manifest" href="/manifest.webmanifest">
