--- a/en/index.html
+++ b/en/index.html
@@ -22,6 +22,7 @@
   <link rel="alternate" hreflang="x-default" href="https://moinam.lumibeauty.studio/vi/">
 
   <!-- Favicon -->
+  <link rel="icon" href="/icons/fav_icon_96.png" sizes="any">
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="manifest" href="/manifest.webmanifest">
