--- a/en/index.html
+++ b/en/index.html
@@ -1116,6 +1116,13 @@
       </div>
       <div class="blog-scroll blog-scroll--single" data-blog-scroll>
         <article class="blog-card">
+          <img src="../images/blogs/blog-4/nguyen-nhan-tham-moi.jpg"
+            alt="Causes of dark lips in men" loading="lazy" decoding="async">
+          <h3>Causes of Dark Lips in Men – Detailed Explanation</h3>
+          <p>Learn about the causes of dark lips in men: smoking, coffee, sunlight, lip licking habits and solutions. Lumi Beauty specializes in treating dark lips for men.</p>
+          <a href="/en/blogs/blog-nguyen-nhan-tham-moi-nam.html" class="read-more">Read more</a>
+        </article>
+        <article class="blog-card">
           <img src="../images/blogs/blog-3/khu-tham-moi-nam-co-bi-do-nhu-nu.jpg"
             alt="Do men's lip neutralizing turn red like women's?" loading="lazy" decoding="async">
           <h3>Do Men's Lip Neutralizing Turn Red Like Women's? Detailed Answer for Guys</h3>
