--- a/ko/index.html
+++ b/ko/index.html
@@ -1099,6 +1099,13 @@
             </div>
             <div class="blog-scroll blog-scroll--single" data-blog-scroll>
                 <article class="blog-card">
+                    <img src="../images/blogs/blog-4/nguyen-nhan-tham-moi.jpg"
+                        alt="남성 입술 어두워지는 원인" loading="lazy" decoding="async">
+                    <h3>남성 입술 어두워지는 원인 – 상세 설명</h3>
+                    <p>남성 입술이 어두워지는 원인을 알아보세요: 흡연, 커피, 햇빛, 입술 핥는 습관 및 해결책. 루미 뷰티는 남성 입술 색소 제거 전문입니다.</p>
+                    <a href="/ko/blogs/blog-nguyen-nhan-tham-moi-nam.html" class="read-more">더 읽기</a>
+                </article>
+                <article class="blog-card">
                     <img src="../images/blogs/blog-3/khu-tham-moi-nam-co-bi-do-nhu-nu.jpg"
                         alt="남성 립 뉴트럴라이징이 여성처럼 붉어지나요?" loading="lazy" decoding="async">
                     <h3>남성 립 뉴트럴라이징이 여성처럼 붉어지나요? 남성분들을 위한 상세 답변</h3>
