--- a/vi/index.html
+++ b/vi/index.html
@@ -1001,6 +1001,14 @@
             </div>
             <div class="blog-scroll blog-scroll--single" data-blog-scroll>
                 <article class="blog-card">
+                    <img src="../images/blogs/blog-4/nguyen-nhan-tham-moi.jpg"
+                        alt="Những nguyên nhân khiến nam giới bị thâm môi" loading="lazy" decoding="async">
+                    <h3>Những Nguyên Nhân Khiến Nam Giới Bị Thâm Môi – Giải Thích Chi Tiết</h3>
+                    <p>Tìm hiểu các nguyên nhân khiến nam giới bị thâm môi: hút thuốc, cà phê, ánh nắng, thói quen liếm
+                        môi và cách khắc phục. Lumi Beauty chuyên xử lý thâm môi nam.</p>
+                    <a href="/vi/blogs/blog-nguyen-nhan-tham-moi-nam.html" class="read-more">Đọc thêm</a>
+                </article>
+                <article class="blog-card">
                     <img src="../images/blogs/blog-3/khu-tham-moi-nam-co-bi-do-nhu-nu.jpg"
                         alt="Khử thâm môi nam có bị đỏ như nữ không?" loading="lazy" decoding="async">
                     <h3>Khử Thâm Môi Nam Có Bị Đỏ Như Nữ Không? Giải Đáp Chi Tiết Cho Anh Em</h3>
