--- a/en/blogs.html
+++ b/en/blogs.html
@@ -56,7 +56,45 @@
             <div class="blogs-grid"
                 style="display: grid; grid-template-columns: repeat(auto-fill, minmax(350px, 1fr)); gap: 32px; margin-top: 40px;">
 
-                <!-- Blog Post 1 -->
+                <!-- Blog Post 1 - Latest -->
+                <article class="blog-card"
+                    style="background: #ffffff; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.1); transition: transform 0.3s ease, box-shadow 0.3s ease;">
+                    <a href="/en/blogs/blog-nguyen-nhan-tham-moi-nam.html"
+                        style="text-decoration: none; color: inherit; display: block;">
+                        <div class="blog-card-image"
+                            style="width: 100%; height: 250px; overflow: hidden; background: #e8f4f5;">
+                            <img src="../images/blogs/blog-4/nguyen-nhan-tham-moi.jpg"
+                                alt="Causes of dark lips in men"
+                                style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease;"
+                                loading="lazy" decoding="async">
+                        </div>
+                        <div class="blog-card-content" style="padding: 24px;">
+                            <div class="blog-card-meta"
+                                style="display: flex; align-items: center; gap: 12px; margin-bottom: 12px; font-size: 0.9rem; color: #666;">
+                                <span class="blog-date">January 20, 2025</span>
+                                <span style="color: #88c0c4;">•</span>
+                                <span class="blog-category">Education</span>
+                            </div>
+                            <h2 class="blog-card-title"
+                                style="font-size: 1.5rem; font-weight: 600; margin-bottom: 12px; color: #2c3e50; line-height: 1.4;">
+                                Causes of Dark Lips in Men – Detailed Explanation
+                            </h2>
+                            <p class="blog-card-excerpt" style="color: #666; line-height: 1.6; margin-bottom: 16px;">
+                                Learn about the causes of dark lips in men: smoking, coffee, sunlight, lip licking habits and solutions. Lumi Beauty specializes in treating dark lips for men.
+                            </p>
+                            <div class="blog-card-footer"
+                                style="display: flex; align-items: center; justify-content: space-between;">
+                                <span class="read-more"
+                                    style="color: #88c0c4; font-weight: 500; display: flex; align-items: center; gap: 8px;">
+                                    Read more
+
+                                </span>
+                            </div>
+                        </div>
+                    </a>
+                </article>
+
+                <!-- Blog Post 2 -->
                 <article class="blog-card"
                     style="background: #ffffff; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.1); transition: transform 0.3s ease, box-shadow 0.3s ease;">
                     <a href="/en/blogs/blog-moi-bong-khong-deu-mau.html"
