--- a/vi/blogs.html
+++ b/vi/blogs.html
@@ -54,6 +54,43 @@
                 <!-- Blog Post 1 - Mới nhất -->
                 <article class="blog-card"
                     style="background: #ffffff; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.1); transition: transform 0.3s ease, box-shadow 0.3s ease;">
+                    <a href="/vi/blogs/blog-nguyen-nhan-tham-moi-nam.html"
+                        style="text-decoration: none; color: inherit; display: block;">
+                        <div class="blog-card-image"
+                            style="width: 100%; height: 250px; overflow: hidden; background: #e8f4f5;">
+                            <img src="../images/blogs/blog-4/nguyen-nhan-tham-moi.jpg"
+                                alt="Những nguyên nhân khiến nam giới bị thâm môi"
+                                style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease;"
+                                loading="lazy" decoding="async">
+                        </div>
+                        <div class="blog-card-content" style="padding: 24px;">
+                            <div class="blog-card-meta"
+                                style="display: flex; align-items: center; gap: 12px; margin-bottom: 12px; font-size: 0.9rem; color: #666;">
+                                <span class="blog-date">20 Tháng 1, 2025</span>
+                                <span style="color: #88c0c4;">•</span>
+                                <span class="blog-category">Giáo dục</span>
+                            </div>
+                            <h2 class="blog-card-title"
+                                style="font-size: 1.5rem; font-weight: 600; margin-bottom: 12px; color: #2c3e50; line-height: 1.4;">
+                                Những Nguyên Nhân Khiến Nam Giới Bị Thâm Môi – Giải Thích Chi Tiết
+                            </h2>
+                            <p class="blog-card-excerpt" style="color: #666; line-height: 1.6; margin-bottom: 16px;">
+                                Tìm hiểu các nguyên nhân khiến nam giới bị thâm môi: hút thuốc, cà phê, ánh nắng, thói quen liếm môi và cách khắc phục. Lumi Beauty chuyên xử lý thâm môi nam.
+                            </p>
+                            <div class="blog-card-footer"
+                                style="display: flex; align-items: center; justify-content: space-between;">
+                                <span class="read-more"
+                                    style="color: #88c0c4; font-weight: 500; display: flex; align-items: center; gap: 8px;">
+                                    Đọc thêm
+                                </span>
+                            </div>
+                        </div>
+                    </a>
+                </article>
+
+                <!-- Blog Post 2 -->
+                <article class="blog-card"
+                    style="background: #ffffff; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.1); transition: transform 0.3s ease, box-shadow 0.3s ease;">
                     <a href="/vi/blogs/blog-khu-tham-moi-nam-co-bi-do-nhu-nu.html"
                         style="text-decoration: none; color: inherit; display: block;">
                         <div class="blog-card-image"
@@ -89,7 +126,7 @@
                     </a>
                 </article>
 
-                <!-- Blog Post 2 -->
+                <!-- Blog Post 3 -->
                 <article class="blog-card"
                     style="background: #ffffff; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.1); transition: transform 0.3s ease, box-shadow 0.3s ease;">
                     <a href="/vi/blogs/blog-khu-tham-moi-cho-nam.html"
@@ -127,7 +164,7 @@
                     </a>
                 </article>
 
-                <!-- Blog Post 3 -->
+                <!-- Blog Post 4 -->
                 <article class="blog-card"
                     style="background: #ffffff; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.1); transition: transform 0.3s ease, box-shadow 0.3s ease;">
                     <a href="/vi/blogs/blog-moi-bong-khong-deu-mau.html"
