--- a/en/blogs/blog-nguyen-nhan-tham-moi-nam.html
+++ b/en/blogs/blog-nguyen-nhan-tham-moi-nam.html
@@ -38,8 +38,7 @@
     <meta property="og:title" content="Causes of Dark Lips in Men – Detailed Explanation | Lumi Beauty">
     <meta property="og:description"
         content="Learn about the causes of dark lips in men: smoking, coffee, sunlight, lip licking habits and solutions.">
-    <meta property="og:image"
-        content="https://moinam.lumibeauty.studio/images/blogs/blog-4/blog-nguyen-nhan-tham-moi-nam.jpg">
+    <meta property="og:image" content="https://moinam.lumibeauty.studio/images/blogs/blog-4/nguyen-nhan-tham-moi.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="Lumi Beauty">
@@ -56,7 +55,7 @@
     <meta name="twitter:description"
         content="Learn about the causes of dark lips in men: smoking, coffee, sunlight and solutions.">
     <meta property="twitter:image"
-        content="https://moinam.lumibeauty.studio/images/blogs/blog-4/blog-nguyen-nhan-tham-moi-nam.jpg">
+        content="https://moinam.lumibeauty.studio/images/blogs/blog-4/nguyen-nhan-tham-moi.jpg">
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-61GYBJ33R0"></script>
