--- a/ko/blogs/blog-nguyen-nhan-tham-moi-nam.html
+++ b/ko/blogs/blog-nguyen-nhan-tham-moi-nam.html
@@ -35,8 +35,7 @@
     <meta property="og:url" content="https://moinam.lumibeauty.studio/ko/blogs/blog-nguyen-nhan-tham-moi-nam.html">
     <meta property="og:title" content="남성 입술 어두워지는 원인 – 상세 설명 | 루미 뷰티">
     <meta property="og:description" content="남성 입술이 어두워지는 원인을 알아보세요: 흡연, 커피, 햇빛, 입술 핥는 습관 및 해결책.">
-    <meta property="og:image"
-        content="https://moinam.lumibeauty.studio/images/blogs/blog-4/blog-nguyen-nhan-tham-moi-nam.jpg">
+    <meta property="og:image" content="https://moinam.lumibeauty.studio/images/blogs/blog-4/nguyen-nhan-tham-moi.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -53,7 +52,7 @@
     <meta name="twitter:title" content="남성 입술 어두워지는 원인 | 루미 뷰티">
     <meta name="twitter:description" content="남성 입술이 어두워지는 원인을 알아보세요: 흡연, 커피, 햇빛 및 해결책.">
     <meta property="twitter:image"
-        content="https://moinam.lumibeauty.studio/images/blogs/blog-4/blog-nguyen-nhan-tham-moi-nam.jpg">
+        content="https://moinam.lumibeauty.studio/images/blogs/blog-4/nguyen-nhan-tham-moi.jpg">
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-61GYBJ33R0"></script>
