--- a/vi/blogs/blog-nguyen-nhan-tham-moi-nam.html
+++ b/vi/blogs/blog-nguyen-nhan-tham-moi-nam.html
@@ -39,8 +39,7 @@
         content="Những Nguyên Nhân Khiến Nam Giới Bị Thâm Môi – Giải Thích Chi Tiết | Lumi Beauty">
     <meta property="og:description"
         content="Tìm hiểu các nguyên nhân khiến nam giới bị thâm môi: hút thuốc, cà phê, ánh nắng, thói quen liếm môi và cách khắc phục.">
-    <meta property="og:image"
-        content="https://moinam.lumibeauty.studio/images/blogs/blog-4/blog-nguyen-nhan-tham-moi-nam.jpg">
+    <meta property="og:image" content="https://moinam.lumibeauty.studio/images/blogs/blog-4/nguyen-nhan-tham-moi.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="Lumi Beauty">
@@ -57,7 +56,7 @@
     <meta name="twitter:description"
         content="Tìm hiểu các nguyên nhân khiến nam giới bị thâm môi: hút thuốc, cà phê, ánh nắng và cách khắc phục.">
     <meta property="twitter:image"
-        content="https://moinam.lumibeauty.studio/images/blogs/blog-4/blog-nguyen-nhan-tham-moi-nam.jpg">
+        content="https://moinam.lumibeauty.studio/images/blogs/blog-4/nguyen-nhan-tham-moi.jpg">
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-61GYBJ33R0"></script>
